add_subdirectory(hello_rgl)
add_subdirectory(hello_rgl_wrapper)
add_subdirectory(2d-wow-cluster-demo)
add_subdirectory(cluster_wrapper)
add_subdirectory(logo)
add_subdirectory(cio)
add_subdirectory(taurus)
add_subdirectory(rearview_camera)
add_subdirectory(rivp_sample)
add_subdirectory(imr_sample)
add_subdirectory(osal_sample_resource)
add_subdirectory(osal_sample_memory)
add_subdirectory(osal_sample_device)
add_subdirectory(dcu_sample)
add_subdirectory(audio)
add_subdirectory(ether_sample)
add_subdirectory(mmc_sample)
add_subdirectory(fatfs_emmc)
add_subdirectory(vspi_sample)
add_subdirectory(fastboot_mono)
add_subdirectory(canfd_sample)
add_subdirectory(lwip_app)
add_subdirectory(rtp_player)
add_subdirectory(common)
